--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h5>Importante</h5>
                 <div class="post mb-4">
                   <img
-                    src="/zenklub_a_man_on_his_40s_sitting_at_the_grass_on_a_large_field__45e18a38-7cd5-4e2a-a621-6aa71f8495ef.png"
+                    src="/5dec47012d257.jpeg"
                     class="img-fluid mb-3"
                     alt="Descripción de la imagen"
                   />
@@ -154,7 +154,7 @@
                 <h5>Importante</h5>
                 <div class="post mb-4">
                   <img
-                    src="/zenklub_a_man_on_his_40s_sitting_at_the_grass_on_a_large_field__45e18a38-7cd5-4e2a-a621-6aa71f8495ef.png"
+                    src="/Videoframe_20230122_105903_com.huawei.himovie.overseas.jpg"
                     class="img-fluid mb-3"
                     alt="Descripción de la imagen"
                   />
